--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "mini-css-extract-plugin": "^0.9.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
